introduction/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intro-app
  labels:
    me: wojtek
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: intro-app
  type: LoadBalancer
