introduction/kube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: intro-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: my.app
    http:
      paths:
        - path: /echo
          backend:
            serviceName: intro-app
            servicePort: 80
